# etf-portfolio-analytics-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/v1/: routes_etfs.py  routes_prices.py
app/domain/: errors.py  stats.py
app/infra/: json_store.py  repositories.py  wiring.py
data/: etfs.json
data/prices/: BND.json  DBC.json  EEM.json  GLD.json  VT.json
docs/adr/: 0001-tooling-and-style.md  0002-error-response-strategy.md
tests/: test_health.py
tests/api/: test_etfs.py  test_prices.py
tests/unit/: test_json_store.py  test_stats.py
